# rusty-pedalbox

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  hidrd.xsd  log_sniffer.py  memory.x  pedalbox_hid.xml
.cargo/: config.toml
.github/workflows/: pre_commit_checks.yaml  tests.yaml
defmt-embassy-usbserial/: Cargo.toml
examples/: counter_save.rs  store_demo.rs
firmware/: Cargo.toml  build.rs  rust-toolchain.toml
firmware/examples/: counter_save.rs  defmt_serial.rs  store_demo.rs
firmware/src/: board.rs  fmt.rs  main.rs  usb.rs
pedalbox_lib/: Cargo.toml
pedalbox_lib/src/: fmt.rs  lib.rs
pedalbox_lib/src/calibration/: adaptive.rs  mod.rs
pedalbox_lib/src/io_monitors/: analog_monitor.rs  load_cell_monitor.rs  mod.rs
pedalbox_lib/src/platform_stm32/: mod.rs
pedalbox_lib/src/storage/: mod.rs
src/: board.rs  calibration.rs  fmt.rs  io_monitor.rs  lib.rs  main.rs  usb.rs
src/calibration/: adaptive.rs  fixed.rs  mod.rs
src/io_monitors/: analog_monitor.rs  load_cell_monitor.rs
src/platform_stm32/: mod.rs
