[package]
name = "rusty-pedalbox"
version = "0.1.0"
edition = "2024"
authors = ["Kristof Kovacs <kristof.kovacs1996@gmail.com>"]

[[bin]]
name = "rusty-pedalbox"
test = false
bench = false

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-stm32 = { version = "0.2.0", features = ["defmt", "stm32f407vg", "unstable-pac", "memory-x", "time-driver-any", "exti"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"]  }
panic-probe = { version = "1.0.0", features = ["defmt", "print-defmt"] }


[profile.release]
debug = 2
lto = true
opt-level = "z"

[profile.dev]
debug = 2
lto = true
opt-level = "z"
