[package]
name = "pedalbox_lib"
version = "0.1.0"
edition = "2024"
authors = ["Kristof Kovacs <kristof.kovacs1996@gmail.com>"]
description = "Library for the common functions and business logic"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("defmt"))'] }

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
defmt = { version = "1.0.1", optional = true }
embassy-stm32 = { version = "0.6.0", features = ["defmt", "stm32f407vg", "unstable-pac"], optional = true }
hx711 = { version = "0.6.0", optional = true }
embedded-hal = { version = "0.2.7", optional = true }

[features]
default = ["defmt"]
defmt = ["dep:defmt", "embassy-stm32?/defmt"]
stm32 = ["dep:embassy-stm32", "dep:hx711", "dep:embedded-hal"]

[target.'cfg(not(target_arch = "arm"))'.dev-dependencies]
rstest = "0.26.1"
